--- a/productos.html
+++ b/productos.html
@@ -52,7 +52,7 @@
                         <button class="btn btn-outline-dark py-3 px-xxl-5" data-bs-toggle="modal" data-bs-target="#cartModal"  style="width:100%;" type="button">CARRITO <i class="bi bi-cart2" style="height: 16px; margin-left: 10px;"></i></button>
                     </div>
                     <div class="text-center" style=" height: 50px;margin-right:5px">
-                        <button type="button" class="btn btn-outline-danger py-3 px-xxl-5 backgroundHover-rojo" style="width:100%;">INGRESAR</button>
+                        <a href="login.html"><button type="button" class="btn btn-outline-danger py-3 px-xxl-5 backgroundHover-rojo" style="width:100%;">INGRESAR</button></a>
                     </div>
                 </div>                
             </div>
@@ -307,7 +307,9 @@
             <!-- Tarjeta 1 -->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="product-card">
-                    <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg" alt="Producto 1">
+                    <a href="producto-info.html?id=1">
+                        <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg" alt="Producto 1">
+                    </a>
                     <h6 class="mt-2 fw-bold text-danger fs-5">MODER-4007/00</h6>
                     <p class="fs-5">Sartén antiadherente 28cm</p>
                     <div class="product-price">S/.217.00</div>
@@ -323,7 +325,9 @@
             <!-- Tarjeta 2 -->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="product-card">
-                    <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/4480.jpg" alt="Producto 2">
+                    <a href="producto-info.html?id=2">
+                        <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/4480.jpg" alt="Producto 2">
+                    </a>
                     <h6 class="mt-2 fw-bold text-danger fs-5">LAB-117-26003</h6>
                     <p class="fs-5">Cacerola de Acero N°28</p>
                     <div class="product-price">S/.120.00</div>
@@ -339,7 +343,9 @@
             <!-- Tarjeta 3 -->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="product-card">
+                    <a href="producto-info.html?id=3">
                     <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395630.jpg" alt="Producto 3">
+                    </a>
                     <h6 class="mt-2 fw-bold text-danger fs-5">CL-6280</h6>
                     <p class="fs-5">Panquequera-Mango de Madera 22cm</p>
                     <div class="product-price">S/.150.00</div>
@@ -355,7 +361,9 @@
             <!-- Tarjeta 4 -->
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="product-card">
-                    <img src="https://m.media-amazon.com/images/I/81dnHMrSnXL.jpg" alt="Producto 4">
+                    <a href="producto-info.html?id=4">
+                        <img src="https://m.media-amazon.com/images/I/81dnHMrSnXL.jpg" alt="Producto 4">
+                    </a>
                     <h6 class="mt-2 fw-bold text-danger fs-5">CL-7582</h6>
                     <p class="fs-5">Sartén de Marmol 26cm</p>
                     <div class="product-price">S/.230.00</div>
