--- a/finalizarPedido.html
+++ b/finalizarPedido.html
@@ -53,7 +53,7 @@
                         <button class="btn btn-outline-dark py-3 px-xxl-5" data-bs-toggle="modal" data-bs-target="#cartModal"  style="width:100%;" type="button">CARRITO <i class="bi bi-cart2" style="height: 16px; margin-left: 10px;"></i></button>
                     </div>
                     <div class="text-center" style=" height: 50px;margin-right:5px">
-                        <button type="button" class="btn btn-outline-danger py-3 px-xxl-5 backgroundHover-rojo" style="width:100%;">INGRESAR</button>
+                        <a href="login.html"><button type="button" class="btn btn-outline-danger py-3 px-xxl-5 backgroundHover-rojo" style="width:100%;">INGRESAR</button></a>
                     </div>
                 </div>                
             </div>
