--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <button class="btn btn-outline-dark py-3 px-xxl-5" data-bs-toggle="modal" data-bs-target="#cartModal"  style="width:100%;" type="button">CARRITO <i class="bi bi-cart2" style="height: 16px; margin-left: 10px;"></i></button>
                     </div>
                     <div class="text-center" style=" height: 50px;margin-right:5px">
-                        <button type="button" class="btn btn-outline-danger py-3 px-xxl-5 backgroundHover-rojo" style="width:100%;">INGRESAR</button>
+                        <a href="login.html"><button type="button" class="btn btn-outline-danger py-3 px-xxl-5 backgroundHover-rojo" style="width:100%;">INGRESAR</button></a>
                     </div>
                 </div>                
             </div>
@@ -274,16 +274,16 @@
                             </div>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link active fw-bold" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link active fw-bold" aria-current="page" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">¿QUIÉNES SOMOS?</a>
+                        <a class="nav-link fw-bold" href="quienes-somos.html">¿QUIÉNES SOMOS?</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">SUCURSALES</a>
+                        <a class="nav-link fw-bold" href="sucursales.html">SUCURSALES</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">PREGUNTAS FRECUENTES</a>
+                        <a class="nav-link fw-bold" href="preguntas.html">PREGUNTAS FRECUENTES</a>
                         </li>
                         <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="cambio y devolucion.html">CAMBIO Y DEVOLUCIÓN</a>
