--- a/preguntas.html
+++ b/preguntas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cambio y Devolución - Distribuidora San Martín</title>
+    <title>Pagina Principal - Distribuidora San Martín</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/estilos-generales.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -298,46 +298,172 @@
     </header>
     <!--Final del header-->
 
-    <!-- Sección Políticas de Cambio y Devolución -->
-    <section class="politicas pt-5">
-        <!-- Banner superior -->
-        <div class="background-rojo text-white text-center py-4 shadow-banner fw-bold fs-2">
-            POLÍTICAS DE CAMBIO Y DEVOLUCIÓN
-        </div>
+<!-- Preguntas Frecuentes -->
+<div class="faq-section container my-5">
+  <!-- Encabezado -->
+  <h2 class="text-center text-white py-2 mb-4" style="background-color:#d32f2f; border-radius:5px;">
+    PREGUNTAS FRECUENTES
+  </h2>
 
-        <!-- Contenido -->
-        <div class="container mt-5">
-            <div class="row justify-content-center">
-                <div class="col-lg-10 col-md-12">
-                    <p class="text-secondary">
-                        En Distribuidora San Martín queremos que estés satisfecho con tu compra, por eso podés solicitar a nuestro equipo de Atención al Cliente el cambio o devolución de un producto adquirido en nuestro sitio.
-                        <br>A continuación, describimos nuestra política de cambios y devoluciones, con plazos y condiciones.
-                        <br>Los motivos por los cuales puedes gestionar el cambio o la devolución de un producto son los siguientes:
-                    </p>
-                    <ul>
-                        <li class="text-secondary">Producto defectuoso</li>
-                        <li class="text-secondary">Producto llegó roto o con desperfecto.</li>
-                        <li class="text-secondary">Producto con variantes (color, tamaño, entre otros) diferentes al pedido.</li>
-                        <li class="text-secondary">Producto distinto al pedido.</li>
-                    </ul>
-                    <p class="text-secondary"><br>No se aceptan cambios y devoluciones de los productos que se encuentren:
-                        <ul>
-                            <li class="text-secondary">Usados.</li>
-                            <li class="text-secondary">Sin alguno de sus accesorios, piezas, manuales, entre otros.</li>
-                            <li class="text-secondary">Sin su envoltorio original (cajas, plásticos, entre otros).</li>
-                            <li class="text-secondary">En condición diferente a las necesarias para productos de esa categoría.</li>
-                        </ul>
-                        </p>
-                        <p class="text-secondary">
-                            En caso de ser devolución o cambio, se enviará el nuevo producto o se restituirá el monto abonado en la cuenta bancaria utilizada para la compra.
-                        <br>Lapso de tiempo para realizar dichos cambios, 5 días hábiles de una vez recibida la compra.
-                        <br>
-                        <small class="text-muted">*(Sugerimos que los productos que sean con pila o eléctricos sean probados una vez recibidos)</small>
-                    </p>
-                </div>
-            </div>
+  <!-- Dos columnas: Cómo registrarse / Cómo comprar -->
+  <div class="row mb-5">
+    <div class="col-md-6 mb-4">
+      <h4 class="text-danger">¿CÓMO REGISTRARSE EN LA WEB?</h4>
+      <textarea class="form-control mb-2" rows="4" placeholder="Escribe tu comentario..."></textarea>
+      <button class="btn btn-danger">Enviar</button>
+    </div>
+    <div class="col-md-6 mb-4">
+      <h4 class="text-danger">¿CÓMO COMPRAR EN LA WEB?</h4>
+      <textarea class="form-control mb-2" rows="4" placeholder="Escribe tu comentario..."></textarea>
+      <button class="btn btn-danger">Enviar</button>
+    </div>
+  </div>
+
+  <!-- Acordeón de preguntas -->
+  <div class="accordion" id="faqAccordion">
+
+    <!-- Pregunta 1 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingOne">
+        <button class="accordion-button text-danger fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true">
+          ¿Cómo realizo mi pedido sobre la web?
+        </button>
+      </h2>
+      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Debes registrarte en la web, elegir los productos que desees, agregarlos al carrito y confirmar tu compra en la sección de pago.
         </div>
-    </section>
+      </div>
+    </div>
+
+    <!-- Pregunta 2 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingTwo">
+        <button class="accordion-button collapsed text-danger fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+          ¿Existe un monto mínimo para comprar?
+        </button>
+      </h2>
+      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Sí, el monto mínimo para realizar un pedido en línea es de S/. 300.00.
+        </div>
+      </div>
+    </div>
+
+    <!-- Pregunta 3 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingThree">
+        <button class="accordion-button collapsed text-danger fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree">
+          ¿Con qué medios de pago puedo pagar?
+        </button>
+      </h2>
+      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Puedes pagar con tarjeta de débito, tarjeta de crédito y transferencia bancaria.
+        </div>
+      </div>
+    </div>
+
+    <!-- Pregunta 4 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingFour">
+        <button class="accordion-button collapsed text-danger fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
+          ¿Qué formas de envío existen?
+        </button>
+      </h2>
+      <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Realizamos envíos a domicilio dentro de la ciudad y a través de transporte autorizado para otras localidades.
+        </div>
+      </div>
+    </div>
+
+    <!-- Pregunta 5 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingFive">
+        <button class="accordion-button collapsed text-danger fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive">
+          ¿Es seguro comprar en la web?
+        </button>
+      </h2>
+      <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Sí, contamos con certificados de seguridad y protección de datos para garantizar tu compra.
+        </div>
+      </div>
+    </div>
+
+    <!-- Pregunta 6 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingSix">
+        <button class="accordion-button collapsed text-danger fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix">
+          ¿Puedo retirar mi pedido personalmente en la tienda?
+        </button>
+      </h2>
+      <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Sí, puedes seleccionar la opción de “Recoger en tienda” durante el proceso de compra.
+        </div>
+      </div>
+    </div>
+
+    <!-- Pregunta 7 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingSeven">
+        <button class="accordion-button collapsed text-danger fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven">
+          ¿Cuánto tiempo tarda en llegar mi pedido?
+        </button>
+      </h2>
+      <div id="collapseSeven" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          El tiempo de entrega es de 24 a 48 horas dentro de la ciudad. Para envíos a otras provincias depende del transporte.
+        </div>
+      </div>
+    </div>
+
+    <!-- Pregunta 8 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingEight">
+        <button class="accordion-button collapsed text-danger fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight">
+          ¿Qué hago si mi pedido llega incompleto o defectuoso?
+        </button>
+      </h2>
+      <div id="collapseEight" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Debes comunicarte con nuestro servicio al cliente en un plazo máximo de 24 horas para solicitar el cambio o devolución.
+        </div>
+      </div>
+    </div>
+
+    <!-- Pregunta 9 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingNine">
+        <button class="accordion-button collapsed text-danger fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine">
+          ¿Puedo cancelar un pedido ya realizado?
+        </button>
+      </h2>
+      <div id="collapseNine" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Sí, siempre y cuando el pedido no haya sido enviado. Comunícate con nuestro equipo de soporte lo antes posible.
+        </div>
+      </div>
+    </div>
+
+    <!-- Pregunta 10 -->
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingTen">
+        <button class="accordion-button collapsed text-danger fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen">
+          ¿Cómo puedo hacer un cambio o devolución?
+        </button>
+      </h2>
+      <div id="collapseTen" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+        <div class="accordion-body">
+          Los cambios y devoluciones se realizan presentando el comprobante de compra en nuestras sucursales o contactando a atención al cliente.
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
 
     <!-- Footer -->
     <footer>
