--- a/producto-info.html
+++ b/producto-info.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cambio y Devolución - Distribuidora San Martín</title>
+    <title>Pagina Principal - Distribuidora San Martín</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/estilos-generales.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -280,10 +280,10 @@
                         <a class="nav-link fw-bold" href="#">¿QUIÉNES SOMOS?</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">SUCURSALES</a>
+                        <a class="nav-link fw-bold" href="sucursales.html">SUCURSALES</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">PREGUNTAS FRECUENTES</a>
+                        <a class="nav-link fw-bold" href="preguntas.html">PREGUNTAS FRECUENTES</a>
                         </li>
                         <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="cambio y devolucion.html">CAMBIO Y DEVOLUCIÓN</a>
@@ -298,48 +298,153 @@
     </header>
     <!--Final del header-->
 
-    <!-- Sección Políticas de Cambio y Devolución -->
-    <section class="politicas pt-5">
-        <!-- Banner superior -->
-        <div class="background-rojo text-white text-center py-4 shadow-banner fw-bold fs-2">
-            POLÍTICAS DE CAMBIO Y DEVOLUCIÓN
-        </div>
 
-        <!-- Contenido -->
-        <div class="container mt-5">
-            <div class="row justify-content-center">
-                <div class="col-lg-10 col-md-12">
-                    <p class="text-secondary">
-                        En Distribuidora San Martín queremos que estés satisfecho con tu compra, por eso podés solicitar a nuestro equipo de Atención al Cliente el cambio o devolución de un producto adquirido en nuestro sitio.
-                        <br>A continuación, describimos nuestra política de cambios y devoluciones, con plazos y condiciones.
-                        <br>Los motivos por los cuales puedes gestionar el cambio o la devolución de un producto son los siguientes:
-                    </p>
-                    <ul>
-                        <li class="text-secondary">Producto defectuoso</li>
-                        <li class="text-secondary">Producto llegó roto o con desperfecto.</li>
-                        <li class="text-secondary">Producto con variantes (color, tamaño, entre otros) diferentes al pedido.</li>
-                        <li class="text-secondary">Producto distinto al pedido.</li>
-                    </ul>
-                    <p class="text-secondary"><br>No se aceptan cambios y devoluciones de los productos que se encuentren:
-                        <ul>
-                            <li class="text-secondary">Usados.</li>
-                            <li class="text-secondary">Sin alguno de sus accesorios, piezas, manuales, entre otros.</li>
-                            <li class="text-secondary">Sin su envoltorio original (cajas, plásticos, entre otros).</li>
-                            <li class="text-secondary">En condición diferente a las necesarias para productos de esa categoría.</li>
-                        </ul>
-                        </p>
-                        <p class="text-secondary">
-                            En caso de ser devolución o cambio, se enviará el nuevo producto o se restituirá el monto abonado en la cuenta bancaria utilizada para la compra.
-                        <br>Lapso de tiempo para realizar dichos cambios, 5 días hábiles de una vez recibida la compra.
-                        <br>
-                        <small class="text-muted">*(Sugerimos que los productos que sean con pila o eléctricos sean probados una vez recibidos)</small>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+ 
 
-    <!-- Footer -->
+  <!-- DETALLE DEL PRODUCTO -->
+  <div class="container my-5">
+    <div class="row">
+      <div class="col-auto py-2 mt-4 fs-2 background-rojo text-white">
+        <p><span class="fw-bold">DETALLE</span> DEL PRODUCTO</p>
+      </div>
+    </div>
+
+    <div class="row mt-4" id="product-detail">
+      <!-- Aquí se cargará el producto dinámicamente -->
+    </div>
+  </div>
+
+  <!-- Productos relacionados -->
+   <div class="container-fluid text-center background-rojo text-white fs-2 py-4 mt-5">
+  <span class="fw-bold">PRODUCTOS RELACIONADOS</span>
+</div>
+
+<div class="container my-5">
+  <div class="row g-4 mt-2">
+
+    <!-- Tarjeta 1 -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="product-card">
+        <a href="producto-info.html?id=1">
+          <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg" alt="Producto 1">
+        </a>
+        <h6 class="mt-2 fw-bold text-danger fs-5">MODER-4007/00</h6>
+        <p class="fs-5">Sartén antiadherente 28cm</p>
+        <div class="product-price">S/.217.00</div>
+        <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
+      </div>
+    </div>
+
+    <!-- Tarjeta 2 -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="product-card">
+        <a href="producto-info.html?id=2">
+          <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/4480.jpg" alt="Producto 2">
+        </a>
+        <h6 class="mt-2 fw-bold text-danger fs-5">LAB-117-26003</h6>
+        <p class="fs-5">Cacerola de Acero N°28</p>
+        <div class="product-price">S/.120.00</div>
+        <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
+      </div>
+    </div>
+
+    <!-- Tarjeta 3 -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="product-card">
+        <a href="producto-info.html?id=3">
+          <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395630.jpg" alt="Producto 3">
+        </a>
+        <h6 class="mt-2 fw-bold text-danger fs-5">CL-6280</h6>
+        <p class="fs-5">Panquequera-Mango de Madera 22cm</p>
+        <div class="product-price">S/.150.00</div>
+        <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
+      </div>
+    </div>
+
+    <!-- Tarjeta 4 -->
+    <div class="col-12 col-md-6 col-lg-3">
+      <div class="product-card">
+        <a href="producto-info.html?id=4">
+          <img src="https://m.media-amazon.com/images/I/81dnHMrSnXL.jpg" alt="Producto 4">
+        </a>
+        <h6 class="mt-2 fw-bold text-danger fs-5">CL-7582</h6>
+        <p class="fs-5">Sartén de Mármol 26cm</p>
+        <div class="product-price">S/.230.00</div>
+        <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+ 
+
+  <!-- SCRIPT DE PRODUCTOS -->
+  <script>
+    const productos = {
+      1: {
+        nombre: "MODER-4007/00",
+        descripcion: "Sartén antiadherente de 28cm, resistente, fácil de limpiar y con mango ergonómico.",
+        precio: "S/.217.00",
+        marca: "MODER",
+        presentacion: "Unidad",
+        imagen: "https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg"
+      },
+      2: {
+        nombre: "LAB-117-26003",
+        descripcion: "Cacerola de acero inoxidable N°28, ideal para preparaciones grandes, resistente y duradera.",
+        precio: "S/.120.00",
+        marca: "LAB",
+        presentacion: "Unidad",
+        imagen: "https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/4480.jpg"
+      },
+      3: {
+        nombre: "CL-6280",
+        descripcion: "Panquequera de 22cm con mango de madera, perfecta para panqueques y crepas.",
+        precio: "S/.150.00",
+        marca: "CL",
+        presentacion: "Unidad",
+        imagen: "https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395630.jpg"
+      },
+      4: {
+        nombre: "CL-7582",
+        descripcion: "Sartén de mármol de 26cm, recubrimiento antiadherente premium, cocina uniforme.",
+        precio: "S/.230.00",
+        marca: "CL",
+        presentacion: "Unidad",
+        imagen: "https://m.media-amazon.com/images/I/81dnHMrSnXL.jpg"
+      }
+    };
+
+    const params = new URLSearchParams(window.location.search);
+    const id = params.get("id");
+    const producto = productos[id];
+
+    if (producto) {
+      document.getElementById("product-detail").innerHTML = `
+        <div class="col-md-6">
+          <img src="${producto.imagen}" alt="${producto.nombre}" class="img-fluid rounded shadow">
+        </div>
+        <div class="col-md-6">
+          <h3 class="fw-bold text-danger">${producto.nombre}</h3>
+          <p>${producto.descripcion}</p>
+          <ul>
+            <li><strong>Marca:</strong> ${producto.marca}</li>
+            <li><strong>Presentación:</strong> ${producto.presentacion}</li>
+            <li><strong>Precio:</strong> ${producto.precio}</li>
+          </ul>
+          <button class="btn btn-outline-danger w-100 backgroundHover-rojo mt-3">Agregar al Carrito</button>
+        </div>
+      `;
+    } else {
+      document.getElementById("product-detail").innerHTML = `<p class="text-center">Producto no encontrado.</p>`;
+    }
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+ <!-- Footer -->
     <footer>
         <div class="background-rojo text-white py-3 footer-red-section">
             <div class="container">
