--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cambio y Devolución - Distribuidora San Martín</title>
+    <title>Pagina Principal - Distribuidora San Martín</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/estilos-generales.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -280,10 +280,10 @@
                         <a class="nav-link fw-bold" href="#">¿QUIÉNES SOMOS?</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">SUCURSALES</a>
+                        <a class="nav-link fw-bold" href="sucursales.html">SUCURSALES</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">PREGUNTAS FRECUENTES</a>
+                        <a class="nav-link fw-bold" href="preguntas.html">PREGUNTAS FRECUENTES</a>
                         </li>
                         <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="cambio y devolucion.html">CAMBIO Y DEVOLUCIÓN</a>
@@ -298,48 +298,57 @@
     </header>
     <!--Final del header-->
 
-    <!-- Sección Políticas de Cambio y Devolución -->
-    <section class="politicas pt-5">
-        <!-- Banner superior -->
-        <div class="background-rojo text-white text-center py-4 shadow-banner fw-bold fs-2">
-            POLÍTICAS DE CAMBIO Y DEVOLUCIÓN
-        </div>
 
-        <!-- Contenido -->
-        <div class="container mt-5">
-            <div class="row justify-content-center">
-                <div class="col-lg-10 col-md-12">
-                    <p class="text-secondary">
-                        En Distribuidora San Martín queremos que estés satisfecho con tu compra, por eso podés solicitar a nuestro equipo de Atención al Cliente el cambio o devolución de un producto adquirido en nuestro sitio.
-                        <br>A continuación, describimos nuestra política de cambios y devoluciones, con plazos y condiciones.
-                        <br>Los motivos por los cuales puedes gestionar el cambio o la devolución de un producto son los siguientes:
-                    </p>
-                    <ul>
-                        <li class="text-secondary">Producto defectuoso</li>
-                        <li class="text-secondary">Producto llegó roto o con desperfecto.</li>
-                        <li class="text-secondary">Producto con variantes (color, tamaño, entre otros) diferentes al pedido.</li>
-                        <li class="text-secondary">Producto distinto al pedido.</li>
-                    </ul>
-                    <p class="text-secondary"><br>No se aceptan cambios y devoluciones de los productos que se encuentren:
-                        <ul>
-                            <li class="text-secondary">Usados.</li>
-                            <li class="text-secondary">Sin alguno de sus accesorios, piezas, manuales, entre otros.</li>
-                            <li class="text-secondary">Sin su envoltorio original (cajas, plásticos, entre otros).</li>
-                            <li class="text-secondary">En condición diferente a las necesarias para productos de esa categoría.</li>
-                        </ul>
-                        </p>
-                        <p class="text-secondary">
-                            En caso de ser devolución o cambio, se enviará el nuevo producto o se restituirá el monto abonado en la cuenta bancaria utilizada para la compra.
-                        <br>Lapso de tiempo para realizar dichos cambios, 5 días hábiles de una vez recibida la compra.
-                        <br>
-                        <small class="text-muted">*(Sugerimos que los productos que sean con pila o eléctricos sean probados una vez recibidos)</small>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <!-- Footer -->
+  <!-- SECCIÓN QUIÉNES SOMOS -->
+  <section class="quienes-somos container my-5">
+    <h2 class="text-center mb-4">¿Quiénes Somos?</h2>
+    <p class="text-center mb-5">
+      En <strong>Distribuidora San Martín</strong> nos especializamos en la venta y distribución de productos de alta calidad. 
+      Nuestro compromiso es llevar lo mejor a cada hogar, negocio y empresa, garantizando confianza, puntualidad y un servicio
+      de excelencia que nos distingue en el mercado.
+    </p>
+
+    <div class="row text-center mb-5">
+      <div class="col-md-6 mb-4">
+        <div class="card h-100 shadow-sm">
+          <img src="img/index/almacen.png" class="card-img-top" alt="Nuestro Almacén">
+          <div class="card-body">
+            <h5 class="card-title">Nuestro Almacén</h5>
+            <p class="card-text">Contamos con un amplio espacio de almacenamiento para garantizar stock permanente y la mejor logística de entrega.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 mb-4">
+        <div class="card h-100 shadow-sm">
+          <img src="img/index/equipo.png" class="card-img-top" alt="Nuestro Equipo">
+          <div class="card-body">
+            <h5 class="card-title">Nuestro Equipo</h5>
+            <p class="card-text">Profesionales capacitados que trabajan día a día con pasión, asegurando un trato cercano y soluciones rápidas para cada cliente.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- MISIÓN, VISIÓN Y VALORES -->
+    <div class="row text-center">
+      <div class="col-md-4 mb-4">
+        <h4 class="fw-bold">Misión</h4>
+        <p>Ofrecer productos de calidad a precios competitivos, brindando un servicio confiable y eficiente para satisfacer las necesidades de nuestros clientes.</p>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h4 class="fw-bold">Visión</h4>
+        <p>Ser la distribuidora líder en la región, reconocida por nuestra seriedad, innovación y compromiso con el crecimiento de nuestros socios comerciales.</p>
+      </div>
+      <div class="col-md-4 mb-4">
+        <h4 class="fw-bold">Valores</h4>
+        <p>Confianza, responsabilidad, respeto, trabajo en equipo e innovación constante para mejorar nuestros procesos y la experiencia de nuestros clientes.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
     <footer>
         <div class="background-rojo text-white py-3 footer-red-section">
             <div class="container">
