--- a/sucursales.html
+++ b/sucursales.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cambio y Devolución - Distribuidora San Martín</title>
+    <title>Pagina Principal - Distribuidora San Martín</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/estilos-generales.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
@@ -298,48 +298,81 @@
     </header>
     <!--Final del header-->
 
-    <!-- Sección Políticas de Cambio y Devolución -->
-    <section class="politicas pt-5">
-        <!-- Banner superior -->
-        <div class="background-rojo text-white text-center py-4 shadow-banner fw-bold fs-2">
-            POLÍTICAS DE CAMBIO Y DEVOLUCIÓN
-        </div>
+  <!--  CONTENIDO SUCURSALES -->
+  <main class="container my-4">
+    <h2 class="sucursal-header text-center">SUCURSALES</h2>
 
-        <!-- Contenido -->
-        <div class="container mt-5">
-            <div class="row justify-content-center">
-                <div class="col-lg-10 col-md-12">
-                    <p class="text-secondary">
-                        En Distribuidora San Martín queremos que estés satisfecho con tu compra, por eso podés solicitar a nuestro equipo de Atención al Cliente el cambio o devolución de un producto adquirido en nuestro sitio.
-                        <br>A continuación, describimos nuestra política de cambios y devoluciones, con plazos y condiciones.
-                        <br>Los motivos por los cuales puedes gestionar el cambio o la devolución de un producto son los siguientes:
-                    </p>
-                    <ul>
-                        <li class="text-secondary">Producto defectuoso</li>
-                        <li class="text-secondary">Producto llegó roto o con desperfecto.</li>
-                        <li class="text-secondary">Producto con variantes (color, tamaño, entre otros) diferentes al pedido.</li>
-                        <li class="text-secondary">Producto distinto al pedido.</li>
-                    </ul>
-                    <p class="text-secondary"><br>No se aceptan cambios y devoluciones de los productos que se encuentren:
-                        <ul>
-                            <li class="text-secondary">Usados.</li>
-                            <li class="text-secondary">Sin alguno de sus accesorios, piezas, manuales, entre otros.</li>
-                            <li class="text-secondary">Sin su envoltorio original (cajas, plásticos, entre otros).</li>
-                            <li class="text-secondary">En condición diferente a las necesarias para productos de esa categoría.</li>
-                        </ul>
-                        </p>
-                        <p class="text-secondary">
-                            En caso de ser devolución o cambio, se enviará el nuevo producto o se restituirá el monto abonado en la cuenta bancaria utilizada para la compra.
-                        <br>Lapso de tiempo para realizar dichos cambios, 5 días hábiles de una vez recibida la compra.
-                        <br>
-                        <small class="text-muted">*(Sugerimos que los productos que sean con pila o eléctricos sean probados una vez recibidos)</small>
-                    </p>
-                </div>
+    <!-- Pestañas -->
+    <ul class="nav nav-tabs mt-4" id="sucursalTabs" role="tablist">
+      <li class="nav-item">
+        <button class="nav-link active" id="sede-central-tab" data-bs-toggle="tab" data-bs-target="#sede-central" type="button" role="tab">Sede Central</button>
+      </li>
+      <li class="nav-item">
+        <button class="nav-link" id="sucursal1-tab" data-bs-toggle="tab" data-bs-target="#sucursal1" type="button" role="tab">Sucursal 1</button>
+      </li>
+      <li class="nav-item">
+        <button class="nav-link" id="sucursal2-tab" data-bs-toggle="tab" data-bs-target="#sucursal2" type="button" role="tab">Sucursal 2</button>
+      </li>
+    </ul>
+
+    <!-- Contenido de pestañas -->
+    <div class="tab-content" id="sucursalTabsContent">
+      <!-- Sede Central -->
+      <div class="tab-pane fade show active" id="sede-central" role="tabpanel">
+        <div class="row mt-3">
+          <div class="col-md-6">
+            <h4>Sede Central</h4>
+            <p><i class="bi bi-geo-alt-fill"></i> Av. Mariscal 1565 – Pueblo Nuevo – Ica, Perú</p>
+            <p><i class="bi bi-telephone-fill"></i> 956 654 325</p>
+            <h5>Horarios</h5>
+            <p>Lunes a Viernes: 08:00 – 18:00 <br>Sábados: 08:00 – 13:00</p>
+            <h5>Envíos</h5>
+            <p><i class="bi bi-truck"></i> Disponible vía transporte</p>
+          </div>
+          <div class="col-md-6">
+            <div class="mapa">
+              <!-- Google Maps -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
+          </div>
         </div>
-    </section>
+      </div>
 
-    <!-- Footer -->
+      <!-- Sucursal 1 -->
+      <div class="tab-pane fade" id="sucursal1" role="tabpanel">
+        <div class="row mt-3">
+          <div class="col-md-6">
+            <h4>Sucursal 1</h4>
+            <p><i class="bi bi-geo-alt-fill"></i> Dirección sucursal 1</p>
+            <p><i class="bi bi-telephone-fill"></i> Teléfono sucursal 1</p>
+            <h5>Horarios</h5>
+            <p>08:00 – 18:00</p>
+          </div>
+          <div class="col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+        </div>
+      </div>
+
+      <!-- Sucursal 2 -->
+      <div class="tab-pane fade" id="sucursal2" role="tabpanel">
+        <div class="row mt-3">
+          <div class="col-md-6">
+            <h4>Sucursal 2</h4>
+            <p><i class="bi bi-geo-alt-fill"></i> Dirección sucursal 2</p>
+            <p><i class="bi bi-telephone-fill"></i> Teléfono sucursal 2</p>
+            <h5>Horarios</h5>
+            <p>08:00 – 18:00</p>
+          </div>
+          <div class="col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
     <footer>
         <div class="background-rojo text-white py-3 footer-red-section">
             <div class="container">
@@ -429,7 +462,8 @@
         </a>
     </div>
 
-    <script src="javaScript/funcionalidades.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="javaScript/funcionalidades.js"></script>
 </body>
 </html>
