--- a/preguntas.html
+++ b/preguntas.html
@@ -274,16 +274,16 @@
                             </div>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link active fw-bold" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link fw-bold" aria-current="page" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">¿QUIÉNES SOMOS?</a>
+                        <a class="nav-link fw-bold" href="quienes-somos.html">¿QUIÉNES SOMOS?</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">SUCURSALES</a>
+                        <a class="nav-link fw-bold" href="sucursales.html">SUCURSALES</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">PREGUNTAS FRECUENTES</a>
+                        <a class="nav-link active fw-bold" href="preguntas.html">PREGUNTAS FRECUENTES</a>
                         </li>
                         <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="cambio y devolucion.html">CAMBIO Y DEVOLUCIÓN</a>
@@ -299,11 +299,10 @@
     <!--Final del header-->
 
 <!-- Preguntas Frecuentes -->
+<div class="container-fluid text-center background-rojo text-white fs-2 py-4 shadow-banner mt-4">
+  <span class="fw-bold">PREGUNTAS FRECUENTES</span>
+</div>
 <div class="faq-section container my-5">
-  <!-- Encabezado -->
-  <h2 class="text-center text-white py-2 mb-4" style="background-color:#d32f2f; border-radius:5px;">
-    PREGUNTAS FRECUENTES
-  </h2>
 
   <!-- Dos columnas: Cómo registrarse / Cómo comprar -->
   <div class="row mb-5">
