--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -274,10 +274,10 @@
                             </div>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link active fw-bold" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link fw-bold" aria-current="page" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">¿QUIÉNES SOMOS?</a>
+                        <a class="nav-link active fw-bold" href="quienes-somos.html">¿QUIÉNES SOMOS?</a>
                         </li>
                         <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="sucursales.html">SUCURSALES</a>
@@ -299,7 +299,9 @@
     <!--Final del header-->
 
 
-
+    <div class="container-fluid text-center background-rojo text-white fs-2 py-4 shadow-banner mt-4">
+      <span class="fw-bold">¡CONOCE MÁS SOBRE NOSOTROS!</span>
+    </div>
   <!-- SECCIÓN QUIÉNES SOMOS -->
   <section class="quienes-somos container my-5">
     <h2 class="text-center mb-4">¿Quiénes Somos?</h2>
