--- a/sucursales.html
+++ b/sucursales.html
@@ -274,16 +274,16 @@
                             </div>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link active fw-bold" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link fw-bold" aria-current="page" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">¿QUIÉNES SOMOS?</a>
+                        <a class="nav-link fw-bold" href="quienes-somos.html">¿QUIÉNES SOMOS?</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">SUCURSALES</a>
+                        <a class="nav-link active fw-bold" href="sucursales.html">SUCURSALES</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">PREGUNTAS FRECUENTES</a>
+                        <a class="nav-link fw-bold" href="preguntas.html">PREGUNTAS FRECUENTES</a>
                         </li>
                         <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="cambio y devolucion.html">CAMBIO Y DEVOLUCIÓN</a>
@@ -298,9 +298,11 @@
     </header>
     <!--Final del header-->
 
+    <div class="container-fluid text-center background-rojo text-white fs-2 py-4 shadow-banner mt-4 mb-5">
+        <span class="fw-bold">SUCURSALES</span>
+    </div>
   <!--  CONTENIDO SUCURSALES -->
   <main class="container my-4">
-    <h2 class="sucursal-header text-center">SUCURSALES</h2>
 
     <!-- Pestañas -->
     <ul class="nav nav-tabs mt-4" id="sucursalTabs" role="tablist">
