--- a/cambiarcontraseña.html
+++ b/cambiarcontraseña.html
@@ -275,16 +275,16 @@
                             </div>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link active fw-bold" aria-current="page" href="#">HOME</a>
+                        <a class="nav-link fw-bold" aria-current="page" href="index.html">HOME</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">¿QUIÉNES SOMOS?</a>
+                        <a class="nav-link fw-bold" href="quienes-somos.html">¿QUIÉNES SOMOS?</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">SUCURSALES</a>
+                        <a class="nav-link fw-bold" href="sucursales.html">SUCURSALES</a>
                         </li>
                         <li class="nav-item mx-3">
-                        <a class="nav-link fw-bold" href="#">PREGUNTAS FRECUENTES</a>
+                        <a class="nav-link fw-bold" href="preguntas.html">PREGUNTAS FRECUENTES</a>
                         </li>
                         <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="cambio y devolucion.html">CAMBIO Y DEVOLUCIÓN</a>
@@ -300,7 +300,7 @@
     <!--Final del header-->
 
   <!-- Contenido principal (Formulario login) -->
-        <div class="container-fluid text-center background-rojo text-white fs-2 py-4 shadow-banner">
+        <div class="container-fluid text-center background-rojo text-white fs-2 py-4 shadow-banner mt-4">
         <span class="fw-bold">CAMBIA TU CONTRASEÑA</span>
         </div>
 <!-- Formulario centrado -->
